Fixed slide-in booking form functionality

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <p>From commercial spaces to select residential properties, we create customized cleaning plans that deliver exceptional results.</p>
             <button id="bookingBtn">Get Your Free Estimate</button>
         </section>
-        
+        <!-- Widgets for services -->
         <section class="widgets-container">
             <div class="widget">
                 <h3>Residential Cleaning</h3>
@@ -47,6 +47,9 @@
             </div>
         </section>
     </main>
+
+    <!-- Book Form-->
+     <div id="bookingContainer"></div> 
     <script src="script.js"></script>
 </body>
 </html>
