Added urgency to the booking-form

--- a/booking-form.html
+++ b/booking-form.html
@@ -18,6 +18,14 @@
                 <option value="post-construction">Post-Construction Cleaning</option>
             </select>
 
+            <label for="urgency">When do you need cleaning?</label>
+            <select id="urgency">
+                <option value="asap">As Soon as Possible</option>
+                <option value="within-week">Within a Week</option>
+                <option value="within-month">Within a Month</option>
+                <option value="flexible">Flexible/Not Urgent</option>
+            </select>
+
             <button type="submit">Submit Request</button>
         </form>
         <span id="closeForm">&times;</span>
