--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                 <h3>Book Service</h3>
                 <img src="calendar-icon.png" alt="Book Service">
                 <p>Schedule your cleaning service today.</p>
-                <button class="widget-btn">Book Now</button>
+                <button class="widget-btn" id="bookNowBtn">Book Now</button>
             </div>
             
             <div class="widget">
