make sure updates are pushed

--- a/booking-form.html
+++ b/booking-form.html
@@ -1,5 +1,7 @@
+<div class="booking-backdrop"></div>
 <div id="bookingForm" class="hidden">
     <div class="form-container">
+        <span id="closeForm">&times;</span>
         <h3>Request a Quote</h3>
         <form>
             <label for="name">Name</label>
@@ -28,6 +30,5 @@
 
             <button type="submit">Submit Request</button>
         </form>
-        <span id="closeForm">&times;</span>
     </div>
 </div>
